euphony-sc-core/src/snapshots/euphony_sc__osc__synthdef__free_test.snap
---
source: src/osc.rs
expression: msg
---
Ok(
    Message(
        OscMessage {
            addr: "/d_free",
            args: [
                String(
                    "my synthdef",
                ),
            ],
        },
    ),
)
