euphony-sc-core/src/snapshots/euphony_sc__osc__synthdef__load_dir_test.snap
---
source: src/osc.rs
expression: msg
---
Ok(
    Message(
        OscMessage {
            addr: "/d_loadDir",
            args: [
                String(
                    "path/to/dir",
                ),
            ],
        },
    ),
)
