euphony-sc-core/src/snapshots/euphony_sc__osc__synthdef__receive_test-3.snap
---
source: src/osc.rs
expression: msg
---
Ok(
    Message(
        OscMessage {
            addr: "/d_recv",
            args: [
                Blob(
                    [
                        1,
                        2,
                    ],
                ),
            ],
        },
    ),
)
